[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "google-api-python-client==2.154.0",
    "google-auth==2.36.0",
    "pytelegrambotapi==4.25.0",
    "replit>=4.1.2",
    "requests>=2.32.4",
]
